<resources>
    <string name="app_name">Giffer</string>
    <string name="activity_main">Home</string>
    <string name="content_authority">com.giffer.giffer</string>

    <!-- News Story Card-->
    <string name="content">Content</string>
    <string name="action_settings">Settings</string>
    <string name="gifDescription">This is a sample text to show what is in the news feed. We can make it great again. This much space is enough for a whole lot of nonsense...though for real content you can click on the link and read the full article. But since you really want everything quick, here goes nothing! Have fun reader and see you.</string>
    <string name="videoTitle">She\'s bouncin all over the place blah blah that too</string>
    <string name="userName">Rushabh Sheth</string>
    <string name="gifferChannel">g/News</string>
    <string name="BetweenChannelTime"> . </string>
    <string name="postTime">11h</string>
    <string name="originalLinkTag">Original Link:</string>
    <string name="userPosts">14 Posts</string>
    <string name="userUpvotes">14k Upvotes</string>

    <!-- App bar Actions-->
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_add">Add</string>
    <string name="action_profile">Profile</string>

    <!-- Add News Activity-->
    <string name="activity_addnews">Add News Story</string>
    <string name="url_textbox">Type or paste your link here</string>
    <string name="news_title">Title of Your News Article</string>
    <string name="news_description">Description of the news article in 60 words or less</string>
    <string name="select_channel">Select a channel</string>
    <string name="addnews_descriptionlength">0</string>
    <string name="addnews_descriptiontotal">/60 Words</string>
    <string name="addnews_descriptioncount">0</string>
    <string name="addnews_descriptiontotalcount">/300 Characters</string>
    <string name="addnews_titletotal">/15 Words</string>
    <string name="addnews_titletotalcount">/75 Characters</string>
    <string name="activity_selectchannel">Select Channel</string>

    <!-- Facebook login-->
    <string name="facebook_application_id" translatable="false">560389907685160</string>
    <string name="fb_login_protocol_scheme">fb560389907685160</string>

    <string name="sign_out">Sign Out</string>
    <string name="no_internet_connection">No Internet. Please connect to the internet and try again!</string>
    <string name="unknown_error">Something went wrong! Please try again.</string>
    <string name="unknown_sign_in_response">Unknown sign in response!</string>
    <string name="activity_profilename">Your Profile</string>
    <string name="newsUpvotes">2801</string>
    <string name="newsComments">42</string>

</resources>
