<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundcorner_card"
    android:orientation="vertical"
    tools:context="com.giffer.giffer.NewsCard.NewsCardFragment"
    tools:showIn="@layout/activity_main">

    <!--View for holding Video-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.42"
        android:background="@color/videoRemainingBackground">

        <ImageView
            android:id="@+id/gifImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical" />

    </FrameLayout>

    <!-- Hold all news information-->
    <LinearLayout
        android:id="@+id/videoDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.58"
        android:orientation="vertical">

        <!-- Title of news -->
        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/videoTitle"
            android:textColor="@color/gifTitle"
            android:textSize="18sp" />

        <!-- News Description -->
        <TextView
            android:id="@+id/videoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/gifDescription"
            android:textColor="@color/gifDescription"
            android:textSize="15sp" />

        <!-- View for holding channel name, time and original link -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="top"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/idChannel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gifferChannel"
                android:textColor="@color/colorText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="@string/BetweenChannelTime"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/timePosted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postTime"
                android:textColor="@color/colorText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/BetweenChannelTime"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/originalLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <!-- User profile pic, name, channel name and time-->
        <LinearLayout
            android:id="@+id/userDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp">

            <!--View for holding Profile Image-->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/rushabh_profile"
                    app:civ_border_color="#80848484"
                    app:civ_border_width="1dp" />

            </FrameLayout>

            <!-- View for holding user name, profile pic, karma -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="top"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userName"
                    android:textColor="@color/colorText" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/userPostCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userPosts"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:text="@string/BetweenChannelTime"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/userUpvotesReceived"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userUpvotes"
                        android:textColor="@color/colorText" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--Thin line above bottom button bar-->
        <View
            android:id="@+id/thinLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="#80c0c0c0" />

        <!--Bottom button bar-->
        <LinearLayout
            android:id="@+id/buttonBottom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="5">

            <ImageView
                android:id="@+id/UpvoteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButton"
                android:padding="0dp"
                android:src="@mipmap/upvote" />

            <ImageView
                android:id="@+id/DownvoteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButton"
                android:padding="0dp"
                android:src="@mipmap/downvote" />

            <ImageView
                android:id="@+id/CommentButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButton"
                android:padding="0dp"
                android:src="@mipmap/comment" />

            <ImageView
                android:id="@+id/ShareButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButton"
                android:padding="0dp"
                android:src="@mipmap/share" />

            <ImageView
                android:id="@+id/BookmarkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorButton"
                android:padding="0dp"
                android:src="@mipmap/bookmark" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>